fixing more stuff with spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,7 +7,7 @@ $white: #FFFFFF;
 $black: #000000;
 
 #spacer {
-  padding-top: 10%;
+  padding-top: 8%;
 }
 
 #headerbg {
